--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/OSShim"]
 	path = deps/OSShim
 	url = git@github.com:vacmg/PMW-OSShim.git
+[submodule "Tests/googletest"]
+	path = Tests/googletest
+	url = https://github.com/google/googletest.git
