Add guards to avoid compiling the same module twice

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ Project(LinuxOSShim)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_subdirectory(deps/OSShim)
+if (NOT TARGET OSShim)
+    add_subdirectory(deps/OSShim)
+endif ()
 
 add_library(LinuxOSShim STATIC)
 
