--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,7 +41,7 @@ jobs:
 
             -   name: Test
                 working-directory: ${{runner.workspace}}/build
-                run: ./Tests/Google_Tests_run
+                run: ./Tests/LinuxOSShim_GoogleTestsExe
 
     Linter:
         runs-on: ubuntu-latest
