Rename LinuxOSShim to LinuxOSInterface & use fetchContent for deps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,20 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
 
-Project(LinuxOSShim)
+Project(LinuxOSInterface)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-if (NOT TARGET OSShim)
-    add_subdirectory(deps/OSShim)
-endif ()
-
-add_library(LinuxOSShim STATIC)
-
-file(GLOB LinuxOSShim_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
-
-target_sources(LinuxOSShim PRIVATE ${LinuxOSShim_SOURCES})
-target_include_directories(LinuxOSShim PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
-
-target_link_libraries(LinuxOSShim PUBLIC OSShim)
-
+# Include the subdirectories
+add_subdirectory(Source)
 add_subdirectory(Tests)
