--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -44,7 +44,7 @@ jobs:
 
             -   name: Build Project
                 if: steps.CacheBuildEnvironment.outputs.cache-hit == '' # If the cache was not restored
-                run: cmake --build ./build --target DoCANCpp
+                run: cmake --build ./build --target LinuxOSInterface
 
             -   name: Build Tests & Dependencies
                 if: steps.CacheBuildEnvironment.outputs.cache-hit == '' # If the cache was not restored
