--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -155,7 +155,7 @@ jobs:
                     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 with:
                     version: 19
-                    ignore: 'CANShim/|Tests/DoCANCppLibTests/'
+                    ignore: 'Tests/'
                     style: 'file'  # Use .clang-format config file
                     tidy-checks: '' # Use .clang-tidy config file
                     database: '${{ runner.workspace }}/build'
