--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -105,6 +105,8 @@ jobs:
     Linter:
         runs-on: ubuntu-latest
         needs: Build
+        env:
+            GH_PAT: ${{ secrets.PMW_CI_PAT }}
 
         permissions:
             contents: write
@@ -114,11 +116,9 @@ jobs:
             -   name: "Checkout repository"
                 uses: actions/checkout@v4
 
-            -   name: Restore cached build environment
-                uses: actions/cache/restore@v4
-                with:
-                    key: "${{ runner.os }}-${{ hashFiles('Source/**', 'Tests/**') }}-build"
-                    path: 'build'
+            -   name: Configure CMake
+                working-directory: ${{ runner.workspace }}
+                run: mkdir build && cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS=--coverage -DCMAKE_C_FLAGS=--coverage -S $GITHUB_WORKSPACE -B ./build
 
             -   name: Linter
                 uses: cpp-linter/cpp-linter-action@v2
