--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,8 +8,9 @@ concurrency:
 
 on:
     push:
-        branches-ignore:
-            - '*Test*'
+        branches:
+            - 'main'
+            - 'develop'
     pull_request:
         branches-ignore:
             - '*Test*'
