--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,9 +25,9 @@ jobs:
         steps:
             -   name: "Import GitHub credentials" # ~/.gitconfig
                 run: |
-                    git config --global --replace-all "url.https://$GH_USER_NAME:$GH_PAT@github.com.insteadOf" ssh://git@github.com
-                    git config --global --add "url.https://$GH_USER_NAME:$GH_PAT@github.com.insteadOf" git@github.com
-                    git config --global --add "url.https://$GH_USER_NAME:$GH_PAT@github.com.insteadOf" https://github.com
+                    git config --global --replace-all "url.https://$GH_USER_NAME:$GH_PAT@github.com/.insteadOf" ssh://git@github.com:
+                    git config --global --add "url.https://$GH_USER_NAME:$GH_PAT@github.com/.insteadOf" git@github.com:
+                    git config --global --add "url.https://$GH_USER_NAME:$GH_PAT@github.com/.insteadOf" https://github.com/
 
             -   name: Cat GitHub credentials
                 run: cat ~/.gitconfig
@@ -127,9 +127,9 @@ jobs:
         steps:
             -   name: "Import GitHub credentials" # ~/.gitconfig
                 run: |
-                    git config --global --replace-all "url.https://$GH_USER_NAME:$GH_PAT@github.com.insteadOf" ssh://git@github.com
-                    git config --global --add "url.https://$GH_USER_NAME:$GH_PAT@github.com.insteadOf" git@github.com
-                    git config --global --add "url.https://$GH_USER_NAME:$GH_PAT@github.com.insteadOf" https://github.com
+                    git config --global --replace-all "url.https://$GH_USER_NAME:$GH_PAT@github.com/.insteadOf" ssh://git@github.com:
+                    git config --global --add "url.https://$GH_USER_NAME:$GH_PAT@github.com/.insteadOf" git@github.com:
+                    git config --global --add "url.https://$GH_USER_NAME:$GH_PAT@github.com/.insteadOf" https://github.com/
 
             -   name: "Checkout repository"
                 uses: actions/checkout@v4
