--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,17 +1,9 @@
 include(FetchContent)
 set(FETCHCONTENT_QUIET OFF)
 
-#if(DEFINED ENV{GITHUB_ACTION}) # TODO remove this when CI auth is fixed
-#    set(GIT_REPO https://vacmg:$ENV{GH_PAT}@github.com/vacmg/OSInterface.git)
-#else()
-#    set(GIT_REPO git@github.com:vacmg/OSInterface.git)
-#endif()
-
-set(GIT_REPO git@github.com:vacmg/OSInterface.git)
-
 FetchContent_Declare(
         OSInterface
-        GIT_REPOSITORY  ${GIT_REPO}
+        GIT_REPOSITORY  git@github.com:vacmg/OSInterface.git
         GIT_TAG         main
 )
 FetchContent_MakeAvailable(OSInterface)
