--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,8 +20,18 @@ jobs:
         runs-on: ubuntu-latest
         env:
             GH_PAT: ${{ secrets.PMW_CI_PAT }}
+            GH_USER_NAME: vacmg
 
         steps:
+            -   name: "Import GitHub credentials" # ~/.gitconfig
+                run: |
+                    git config --global --replace-all "url.https://$GH_USER_NAME:$GH_PAT@github.com/.insteadOf" ssh://git@github.com:
+                    git config --global --add "url.https://$GH_USER_NAME:$GH_PAT@github.com/.insteadOf" git@github.com:
+                    git config --global --add "url.https://$GH_USER_NAME:$GH_PAT@github.com/.insteadOf" https://github.com/
+
+            -   name: Cat GitHub credentials
+                run: cat ~/.gitconfig
+
             -   name: "Checkout repository"
                 uses: actions/checkout@v4
 
@@ -108,12 +118,19 @@ jobs:
         needs: Build
         env:
             GH_PAT: ${{ secrets.PMW_CI_PAT }}
+            GH_USER_NAME: vacmg
 
         permissions:
             contents: write
             pull-requests: write
 
         steps:
+            -   name: "Import GitHub credentials" # ~/.gitconfig
+                run: |
+                    git config --global --replace-all "url.https://$GH_USER_NAME:$GH_PAT@github.com/.insteadOf" ssh://git@github.com:
+                    git config --global --add "url.https://$GH_USER_NAME:$GH_PAT@github.com/.insteadOf" git@github.com:
+                    git config --global --add "url.https://$GH_USER_NAME:$GH_PAT@github.com/.insteadOf" https://github.com/
+
             -   name: "Checkout repository"
                 uses: actions/checkout@v4
 
